@@ -1,3 +1,11 @@
+2012-03-11
+* move the unpacking to a directory called 'data'. Dump the state of the
+program in a pickle so it can be read back for later use.
+
+2012-03-08
+* add script that uses hexdump -Cv to generate files to be used in a GUI. It's
+faster than writing our own.
+
 2012-03-01
 * revive knowledgebase idea, but now as a pretty printer
 
